RESOLVED FIXED303263
Fix table column width distribution for colspan with mixed percent and auto columns
https://bugs.webkit.org/show_bug.cgi?id=303263
Summary Fix table column width distribution for colspan with mixed percent and auto c...
Ahmad Saleem
Reported 2025-11-29 15:42:24 PST
ssia - it is known long standing issue, just trying to fix and let's see what happen
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-29 15:42:31 PST
Ahmad Saleem
Comment 2 2025-11-29 15:47:42 PST
EWS
Comment 3 2026-01-05 12:30:38 PST
Committed 305120@main (292b717d8978): <https://commits.webkit.org/305120@main> Reviewed commits have been landed. Closing PR #54582 and removing active labels.
Ahmad Saleem
Comment 4 2026-01-21 06:20:59 PST
*** Bug 13598 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 5 2026-01-21 06:23:17 PST
*** Bug 17287 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 6 2026-01-21 06:24:30 PST
*** Bug 121113 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 7 2026-01-21 06:44:42 PST
*** Bug 53065 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 8 2026-01-21 06:46:48 PST
*** Bug 45111 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 9 2026-01-21 06:47:24 PST
*** Bug 32744 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.